feat(pgbackrest): Simplify schedules
- Deprecate `pgbackrest_schedules variable` (will be removed in a future release)
- Add `pgbackrest_schedule_full` to define when to run full backups
- Add `pgbackrest_schedule_diff` to define when to run differential backups
- Add `pgbackrest_schedule_incr` to define when to run incremental backups

Fixes #16.

Signed-off-by: Julien Riou <julien@riou.xyz>

--- a/roles/pgbackrest/templates/schedules/pgbackrest.timer.j2
+++ b/roles/pgbackrest/templates/schedules/pgbackrest.timer.j2
@@ -5,9 +5,18 @@ PartOf=pgbackrest-{{ backup_type }}.service
 
 [Timer]
 Unit=pgbackrest-{{ backup_type }}.service
+{% if timer_settings is defined %}
 {% for k, v in timer_settings.items() %}
 {{ k }}={{ v }}
 {% endfor %}
+{% else %}
+OnCalendar={{ on_calendar }}
+{% if randomized_delay_sec is defined %}
+RandomizedDelaySec={{ randomized_delay_sec }}
+FixedRandomDelay=false
+{% endif %}
+Persistent=false
+{% endif %}
 
 [Install]
 WantedBy=timers.target
